gtk3: replaced assets for checks and radios

--- a/gtk-3.0/gtk-widgets-assets.css
+++ b/gtk-3.0/gtk-widgets-assets.css
@@ -2,208 +2,147 @@
  * check and radio *
  *******************/
 /* draw regular check and radio items using our assets */
-.check,
-.check:hover,
-.check row:selected,
-.check row:selected:focus {
-    border-style: none;
-    border-radius: 3px;
-    background-color: @button_normal_color;
-    background-image: url("assets/blank.png");
+.check {
+    -gtk-icon-source: url("assets/checkbox-unchecked.svg");
 }
 
-.check:insensitive,
-.check row:selected:insensitive,
-.check row:selected:focus:insensitive {
-    background-color: shade(@button_normal_color, 1.17);
-    background-image: url("assets/blank.png");
+.check:insensitive {
+    -gtk-icon-source: url("assets/checkbox-unchecked-insensitive.svg");
 }
 
-.check:active,
-.check:active:hover,
-.check row:selected:active,
-.check row:selected:focus:active {
-    background-color: @theme_selected_bg_color;
-    background-image: url("assets/check.png");
+.check:checked {
+    -gtk-icon-source: url("assets/checkbox-checked.svg");
 }
 
-.check:active:insensitive,
-.check row:selected:active:insensitive,
-.check row:selected:focus:active:insensitive {
-    background-color: shade(@button_normal_color, 1.17);
-    background-image: url("assets/check-insensitive.png");
+.check:checked:insensitive {
+    -gtk-icon-source: url("assets/checkbox-checked-insensitive.svg");
 }
 
-.check:inconsistent,
-.check:inconsistent:hover,
-.check:inconsistent:active:hover,
-.check row:selected:inconsistent,
-.check row:selected:focus:inconsistent {
-    background-color: @theme_selected_bg_color;
-    background-image: url("assets/check-mixed.png");
+.check:inconsistent {
+    -gtk-icon-source: url("assets/checkbox-mixed.svg");
 }
 
-.check:inconsistent:insensitive,
-.check row:selected:inconsistent:insensitive,
-.check row:selected:focus:inconsistent:insensitive {
-    background-color: shade(@button_normal_color, 1.17);
-    background-image: url("assets/check-mixed-insensitive.png");
-}
-.check row:selected:active,
-.check row:selected:focus:active {
-    box-shadow: inset 1px 1px @theme_selected_fg_color,
-                inset -1px -1px @theme_selected_fg_color;
+.check:inconsistent:insensitive {
+    -gtk-icon-source: url("assets/checkbox-mixed-insensitive.svg");
 }
 
-.check row:selected:active:insensitive,
-.check row:selected:focus:active:insensitive {
-    box-shadow: none;
-}
-.radio,
-.radio:hover,
-.radio row:selected,
-.radio row:selected:focus {
-    border-style: none;
-    border-radius: 8px;
-    background-color: @button_normal_color;
-    background-image: url("assets/radio-unchecked.png");
+.radio {
+    -gtk-icon-source: url("assets/radio-unselected.svg");
 }
 
-.radio:insensitive,
-.radio row:selected:insensitive,
-.radio row:selected:focus:insensitive {
-    background-color: shade(@button_normal_color, 1.17);
-    background-image: url("assets/blank.png");
+.radio:insensitive {
+    -gtk-icon-source: url("assets/radio-unselected-insensitive.svg");
 }
 
-.radio:active,
-.radio:active:hover,
-.radio row:selected:active,
-.radio row:selected:focus:active {
-    background-color: @theme_selected_bg_color;
-    background-image: url("assets/radio.png");
+.radio:checked {
+    -gtk-icon-source: url("assets/radio-selected.svg");
 }
 
-.radio:active:insensitive,
-.radio row:selected:active:insensitive,
-.radio row:selected:focus:active:insensitive {
-    background-color: shade(@button_normal_color, 1.17);
-    background-image: url("assets/radio-insensitive.png");
+.radio:checked:insensitive {
+    -gtk-icon-source: url("assets/radio-selected-insensitive.svg");
 }
 
-.radio:inconsistent,
-.radio:inconsistent:hover,
-.radio:inconsistent:active:hover,
-.radio row:selected:inconsistent,
-.radio row:selected:focus:inconsistent {
-    background-color: @theme_selected_bg_color;
-    background-image: url("assets/check-mixed.png");
+.radio:inconsistent {
+    -gtk-icon-source: url("assets/radio-mixed.svg");
 }
 
-.radio:inconsistent:insensitive,
-.radio row:selected:inconsistent:insensitive,
-.radio row:selected:focus:inconsistent:insensitive {
-    background-color: shade(@button_normal_color, 1.17);
-    background-image: url("assets/check-mixed-insensitive.png");
-}
-.radio row:selected:active,
-.radio row:selected:focus:active {
-    box-shadow: inset 1px 1px @theme_selected_fg_color,
-                inset -1px -1px @theme_selected_fg_color;
+.radio:inconsistent:insensitive {
+    -gtk-icon-source: url("assets/radio-mixed-insensitive.svg");
 }
 
-.radio row:selected:active:insensitive,
-.radio row:selected:focus:active:insensitive {
-    box-shadow: none;
+.menuitem.check {
+    -gtk-icon-source: none;
 }
+
 .menuitem.check:active {
-    background-image: url("assets/menuitem-checkbox-checked.png");
+    -gtk-icon-source: url("assets/menuitem-checkbox-checked.svg");
 }
 
 .menuitem.check:active:hover {
-    background-image: url("assets/menuitem-checkbox-checked-hover.png");
+    -gtk-icon-source: url("assets/menuitem-checkbox-checked-hover.svg");
 }
 
 .menuitem.check:active:insensitive {
-    background-image: url("assets/menuitem-checkbox-checked-insensitive.png");
+    -gtk-icon-source: url("assets/menuitem-checkbox-checked-insensitive.svg");
 }
 
 .menuitem.check:inconsistent:hover,
 .menuitem.radio:inconsistent:hover {
-    background-image: url("assets/menuitem-checkbox-mixed-hover.png");
+    -gtk-icon-source: url("assets/menuitem-checkbox-mixed-hover.svg");
 }
 
 .menuitem.check:inconsistent,
 .menuitem.radio:inconsistent {
-    background-image: url("assets/menuitem-checkbox-mixed.png");
+    -gtk-icon-source: url("assets/menuitem-checkbox-mixed.svg");
 }
 
 .menuitem.check:inconsistent:insensitive,
 .menuitem.radio:inconsistent:insensitive {
-    background-image: url("assets/menuitem-checkbox-mixed-insensitive.png");
+    -gtk-icon-source: url("assets/menuitem-checkbox-mixed-insensitive.svg");
+}
+
+.menuitem.radio {
+    -gtk-icon-source: none;
 }
 
 .menuitem.radio:active {
-    background-image: url("assets/menuitem-radio-checked.png");
+    -gtk-icon-source: url("assets/menuitem-radio-checked.svg");
 }
 
 .menuitem.radio:active:hover {
-    background-image: url("assets/menuitem-radio-checked-hover.png");
+    -gtk-icon-source: url("assets/menuitem-radio-checked-hover.svg");
 }
 
 .menuitem.radio:active:insensitive {
-    background-image: url("assets/menuitem-radio-checked-insensitive.png");
+    -gtk-icon-source: url("assets/menuitem-radio-checked-insensitive.svg");
 }
-.menuitem.check,
-.menuitem.radio,
-.menuitem.check:hover,
-.menuitem.radio:hover,
-.menuitem.check:insensitive,
-.menuitem.radio:insensitive {
-    border-style: none;
-    background-color: transparent;
-    background-image: none;
-}
+
 GtkIconView.content-view.cell.check {
-    border-radius: 5px;
-    background-color: @button_normal_color;
-    background-image: url("assets/grid-selection-blank.png");
+    -gtk-icon-source: url("assets/grid-selection-unchecked.svg");
 }
 
 GtkIconView.content-view.cell.check:active {
-    background-color: @theme_selected_bg_color;
-    background-image: url("assets/grid-selection.png");
-}
-.sidebar .view.radio:active,
-.sidebar .view.radio:active:focus,
-.sidebar .view.radio:active:hover {
-	background-image: url("assets/radio-checked.png");
+    -gtk-icon-source: url("assets/grid-selection-checked.svg");
 }
 
-.sidebar .view.radio:hover {
-	background-image: url("assets/radio-checked.png");
-}
-
-.sidebar .view.radio:active:selected,
-.sidebar .view.radio:active:selected:focus {
-	background-image: url("assets/radio.png");
-}
-
-.sidebar .view.radio:selected:hover,
-.sidebar .view.radio:selected:focus {
-	background-image: url("assets/radio.png");	
-}
 /******************
  * pane separator *
  ******************/
+.pane-separator,
 .pane-separator.horizontal {
-    background-image: url("assets/pane-separator-grip.png");
+    background-image: linear-gradient(to bottom,
+                                      shade(@theme_bg_color, 0.8) 0%,
+                                      shade(@theme_bg_color, 0.8) 20%,
+                                      transparent 20%,
+                                      transparent 45%,
+                                      shade(@theme_bg_color, 0.8) 45%,
+                                      shade(@theme_bg_color, 0.8) 55%,
+                                      transparent 55%,
+                                      transparent 80%,
+                                      shade(@theme_bg_color, 0.8) 80%,
+                                      shade(@theme_bg_color, 0.8)
+                                      );
+
+    background-size: 4px 10px;
     background-repeat: no-repeat;
     background-position: center center;
 }
 
 .pane-separator.vertical {
-    background-image: url("assets/pane-separator-grip-vertical.png");
+    background-image: linear-gradient(to right,
+                                      shade(@theme_bg_color, 0.8) 0%,
+                                      shade(@theme_bg_color, 0.8) 20%,
+                                      transparent 20%,
+                                      transparent 45%,
+                                      shade(@theme_bg_color, 0.8) 45%,
+                                      shade(@theme_bg_color, 0.8) 55%,
+                                      transparent 55%,
+                                      transparent 80%,
+                                      shade(@theme_bg_color, 0.8) 80%,
+                                      shade(@theme_bg_color, 0.8)
+                                      );
+
+    background-size: 10px 4px;
     background-repeat: no-repeat;
     background-position: center center;
 }
