feat(gtk3): defined focus_color for keyboard focus

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -251,7 +251,7 @@ GtkLinkButton.button:checked:hover {
 }
 
 .button:focus {
-    border-color: @error_color;
+    border-color: @focus_color;
 }
 /* default button */
 .button.default {
