fix(gtk3): shape of button on tab

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -1314,6 +1314,7 @@ GtkModelButton.button:selected {
     text-shadow: none;
     icon-shadow: none;
     color: @theme_text_color;
+    border-radius: 1px;
 }
 .notebook tab .button:hover {
     color: @theme_selected_fg_color;
